[Glitch] Fix manual scrolling issue on Firefox/Windows
Port dc0750abc331749a92ffa96fed9fe048acdea3b1 to glitch-soc

--- a/app/javascript/flavours/glitch/styles/components/index.scss
+++ b/app/javascript/flavours/glitch/styles/components/index.scss
@@ -726,7 +726,6 @@
   overflow-x: hidden;
   flex: 1 1 auto;
   -webkit-overflow-scrolling: touch;
-  will-change: transform; // improves perf in mobile Chrome
 
   &.optionally-scrollable {
     overflow-y: auto;
